Fixed disproportionately high z-index value

--- a/css/_hc.styl
+++ b/css/_hc.styl
@@ -108,6 +108,7 @@ auth0-input-icon($icon)
 
 .auth0-lock.auth0-lock
   font-family $hc-font-family
+  z-index: 9998 // Prevents z-index conflicts with usabilla
 
   &.auth0-lock-opened-in-frame
     margin 0
